--- a/templates/user/settings/navbar.tmpl
+++ b/templates/user/settings/navbar.tmpl
@@ -24,11 +24,14 @@
 			{{ctx.Locale.Tr "settings.applications"}}
 		</a>
 		{{if not ($.UserDisabledFeatures.Contains "manage_ssh_keys" "manage_gpg_keys")}}
-		<a class="{{if .PageIsSettingsKeys}}active {{end}}item" href="{{AppSubUrl}}/user/settings/keys">
-			{{ctx.Locale.Tr "settings.ssh_gpg_keys"}}
-		</a>
-		{{end}}
-		{{if .EnableActions}}
+                <a class="{{if .PageIsSettingsKeys}}active {{end}}item" href="{{AppSubUrl}}/user/settings/keys">
+                        {{ctx.Locale.Tr "settings.ssh_gpg_keys"}}
+                </a>
+                <a class="{{if .PageIsSettingsTrustedCerts}}active {{end}}item" href="{{AppSubUrl}}/user/settings/trusted_certs">
+                        {{ctx.Locale.Tr "trusted_certs"}}
+                </a>
+                {{end}}
+                {{if .EnableActions}}
 		<details class="item toggleable-item" {{if or .PageIsSharedSettingsRunners .PageIsSharedSettingsSecrets .PageIsSharedSettingsVariables}}open{{end}}>
 			<summary>{{ctx.Locale.Tr "actions.actions"}}</summary>
 			<div class="menu">
